--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="section1 h-screen bg-blue-500 bg-none-">
       <div class="maindiv border w-10/12 p-6 relative top-8 left-28 bg-white">
         <div class="flex flex-wrap gap-x-10">
-          <img src="../images/logo.png" alt="" />
+          <img src="..//new file/logo.png" alt="" />
           <a href="" class="pl-24 text-rose-500">Home</a>
           <a href="" class="hover:text-rose-500">About</a>
           <a href="" class="hover:text-rose-500">work process</a>
@@ -51,7 +51,7 @@
         >
           <img
             class="bg-blue-700 hover:bg-rose-400 p-3 relative left-20 w-20 h-20 rounded-full"
-            src="../images/featured-item-01.png"
+            src="..//featured-item-01.png"
             alt=""
           />
           <h2 class="text-3xl text-center pt-6">Modren stragry</h2>
@@ -65,7 +65,7 @@
         >
           <img
             class="bg-blue-700 hover:bg-rose-400 p-3 relative left-20 w-20 h-20 rounded-full"
-            src="../images/featured-item-01.png"
+            src="..//new file/featured-item-01.png"
             alt=""
           />
           <h2 class="text-3xl text-center pt-6">Best relationship</h2>
@@ -78,7 +78,7 @@
         >
           <img
             class="bg-blue-700 hover:bg-rose-400 p-3 relative left-20 w-20 h-20 rounded-full"
-            src="../images/featured-item-01.png"
+            src="..//new file/featured-item-01.png"
             alt=""
           />
           <h2 class="text-3xl text-center pt-6">ultimate</h2>
@@ -91,7 +91,7 @@
 
     <section class="h-full flex-wrap">
       <div class="pl-64 pt-14">
-        <img src="../images/left-image.png" alt="" width="22%" />
+        <img src="..//new file/left-image.png" alt="" width="22%" />
       </div>
       <div class="float-right relative bottom-48 right-64">
         <h2 class="text-3xl capitalize">Let's discuse your project</h2>
@@ -118,7 +118,7 @@
           </p>
         </div>
         <div class="pt-14 float-right relative bottom-60 right-56">
-          <img src="../images/right-image.png" alt="" width="80%" />
+          <img src="..//new file/right-image.png" alt="" width="80%" />
         </div>
       </div>
     </section>
@@ -135,7 +135,7 @@
 
       <div class="newdiv flex gap-x-10 pl-40">
         <div class="border w-40 h-48 rounded-3xl p-4 bg-white mt-32">
-          <img class="pl-12" src="../images/work-process-item-01.png" alt="" />
+          <img class="pl-12" src="..//new file/work-process-item-01.png" alt="" />
           <h2 class="text-black pl-6 pt-4">Get ideas</h2>
           <a
             href=""
@@ -154,7 +154,7 @@
           >
         </div>
         <div class="border w-40 h-48 rounded-3xl p-4 bg-white mt-32">
-          <img class="pl-12" src="../images/work-process-item-01.png" alt="" />
+          <img class="pl-12" src="..//new file/work-process-item-01.png" alt="" />
           <h2 class="text-black pl-6 pt-4">Get ideas</h2>
           <a
             href=""
@@ -173,7 +173,7 @@
           >
         </div>
         <div class="border w-40 h-48 rounded-3xl p-4 bg-white mt-32">
-          <img class="pl-12" src="../images/work-process-item-01.png" alt="" />
+          <img class="pl-12" src="..//new file/work-process-item-01.png" alt="" />
           <h2 class="text-black pl-6 pt-4">Get ideas</h2>
           <a
             href=""
@@ -192,7 +192,7 @@
           >
         </div>
         <div class="border w-40 h-48 rounded-3xl p-4 bg-white mt-32">
-          <img class="pl-12" src="../images/work-process-item-01.png" alt="" />
+          <img class="pl-12" src="..//new file/work-process-item-01.png" alt="" />
           <h2 class="text-black pl-6 pt-4">Get ideas</h2>
           <a
             href=""
@@ -211,7 +211,7 @@
           >
         </div>
         <div class="border w-40 h-48 rounded-3xl p-4 bg-white mt-32">
-          <img class="pl-12" src="../images/work-process-item-01.png" alt="" />
+          <img class="pl-12" src="..//new file/work-process-item-01.png" alt="" />
           <h2 class="text-black pl-6 pt-4">Get ideas</h2>
           <a
             href=""
@@ -230,7 +230,7 @@
           >
         </div>
         <div class="border w-40 h-48 rounded-3xl p-4 bg-white mt-32">
-          <img class="pl-12" src="../images/work-process-item-01.png" alt="" />
+          <img class="pl-12" src="..//new file/work-process-item-01.png" alt="" />
           <h2 class="text-black pl-6 pt-4">Get ideas</h2>
           <a
             href=""
